# SOGP

./: AUTHORS  CMakeLists.txt  README
lib/: GP.h  Makefile.am  SOGP.cc  SOGP.h  SOGP_aux.cc  SOGP_aux.h
newmat/: include.h  newmat6.cpp
tests/: SOGPtest.cc  cjbTest.cc
